# GeoKernel.Examples.Qt

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  geokernel.license
AddLayers/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  SampleSupport.h  main.cpp
AddLayers/cmake/: AcquireGeoKernelSdk.cmake
AddLayers/resources/: AddLayers.rc  icons.qrc
HelloMap/: CMakeLists.txt  README.md  SampleSupport.h  main.cpp
HelloMap/cmake/: AcquireGeoKernelSdk.cmake  CopyRuntime.cmake
HelloMap/resources/: icons.qrc
cmake/: AcquireGeoKernelSdk.cmake  CopyGeoKernelRuntime.cmake  CopySampleAssets.cmake  GeoKernelSampleAppIcon.rc.in
examples/Basic/AddLayers/: main.cpp
examples/Basic/HelloMap/: main.cpp
examples/Basic/Measure/: main.cpp
examples/Basic/Minimap/: main.cpp
examples/Basic/Project/: main.cpp
examples/Basic/Scalebar/: main.cpp
examples/Common/: Helpers.h  SampleAppIcon.cpp
examples/CoordinateSystems/CoordinateTransform/: main.cpp
examples/CoordinateSystems/CrsByAuthority/: main.cpp
examples/CoordinateSystems/CrsDatabase/: main.cpp
examples/CoordinateSystems/OnTheFlyReproject/: main.cpp
examples/CoordinateSystems/WebMercator/: main.cpp
examples/CoordinateSystems/Wgs84Setup/: main.cpp
examples/EditingAndDigitizing/AddPointInteractive/: main.cpp
examples/EditingAndDigitizing/AddPointProgrammatic/: main.cpp
examples/EditingAndDigitizing/AddPolygonInteractive/: main.cpp
examples/EditingAndDigitizing/AddPolygonProgrammatic/: main.cpp
examples/EditingAndDigitizing/AddPolylineInteractive/: main.cpp
examples/EditingAndDigitizing/AddPolylineProgrammatic/: main.cpp
examples/EditingAndDigitizing/AddWithAttributes/: main.cpp
examples/EditingAndDigitizing/CanEditCheck/: main.cpp
examples/EditingAndDigitizing/DeleteFeature/: main.cpp
examples/EditingAndDigitizing/DeleteVertex/: main.cpp
examples/EditingAndDigitizing/EditAndSave/: main.cpp
examples/EditingAndDigitizing/EditDirtyState/: main.cpp
examples/EditingAndDigitizing/EditSession/: main.cpp
examples/EditingAndDigitizing/EditSessionSignals/: main.cpp
examples/EditingAndDigitizing/EditVerticesTool/: main.cpp
examples/EditingAndDigitizing/InsertVertex/: main.cpp
examples/EditingAndDigitizing/MoveFeatureProgrammatic/: main.cpp
examples/EditingAndDigitizing/MoveFeatureTool/: main.cpp
examples/EditingAndDigitizing/MultiLayerEdit/: main.cpp
examples/EditingAndDigitizing/SetAttributes/: main.cpp
examples/EditingAndDigitizing/SnappingEnabled/: main.cpp
examples/EditingAndDigitizing/UndoRedo/: main.cpp
examples/Formats/DxfLoad/: main.cpp
examples/Formats/GeoPackageLoad/: main.cpp
examples/Formats/KmlLoad/: main.cpp
examples/Formats/MifLoad/: main.cpp
examples/Formats/ShapefileLoad/: main.cpp
examples/Formats/ShapefileSaveAs/: main.cpp
examples/Formats/TabLoad/: main.cpp
examples/Labeling/BasicLabel/: main.cpp
examples/Labeling/LabelCollisionOff/: main.cpp
examples/Labeling/LabelFont/: main.cpp
examples/Labeling/LabelHalo/: main.cpp
examples/Labeling/LabelOffset/: main.cpp
examples/Labeling/LabelRotation/: main.cpp
examples/LayerManagement/InMemoryLayers/: main.cpp
examples/LayerManagement/LayerAddRemove/: main.cpp
examples/LayerManagement/LayerEvents/: main.cpp
examples/LayerManagement/LayerExtent/: main.cpp
examples/LayerManagement/LayerLoadCancel/: main.cpp
examples/LayerManagement/LayerLoadOptions/: main.cpp
examples/LayerManagement/LayerRefresh/: main.cpp
examples/LayerManagement/LayerReorder/: main.cpp
examples/LayerManagement/LayerVisibility/: main.cpp
examples/LayerManagement/LayerZoomTo/: main.cpp
examples/LayerManagement/MultiWindowSync/: main.cpp
examples/RasterAndXYZTiles/GeoTiffLoad/: main.cpp
examples/RasterAndXYZTiles/OpenStreetMap/: main.cpp
examples/RasterAndXYZTiles/RasterOverview/: main.cpp
examples/RasterAndXYZTiles/RasterTileCache/: main.cpp
examples/RasterAndXYZTiles/RasterWorldTransform/: main.cpp
examples/RasterAndXYZTiles/XyzAttribution/: main.cpp
examples/RasterAndXYZTiles/XyzCustomUrl/: main.cpp
examples/RasterAndXYZTiles/XyzDiagnostics/: main.cpp
examples/RasterAndXYZTiles/XyzLocalCache/: main.cpp
examples/RasterAndXYZTiles/XyzMinMaxZoom/: main.cpp
examples/RasterAndXYZTiles/XyzPresets/: main.cpp
examples/RasterAndXYZTiles/XyzTileSize/: main.cpp
examples/RouteAndNetworkAnalysis/: README.md
examples/SamplesGallery/: main.cpp
examples/SelectionAndQuery/AllFeaturesAtPoint/: main.cpp
examples/SelectionAndQuery/BoxSelect/: main.cpp
examples/SelectionAndQuery/ClickHitTest/: main.cpp
examples/SelectionAndQuery/FeatureAttributes/: main.cpp
examples/SelectionAndQuery/InfoTool/: main.cpp
examples/SelectionAndQuery/MapClickedSignal/: main.cpp
examples/SelectionAndQuery/SelectAdd/: main.cpp
examples/SelectionAndQuery/SelectClear/: main.cpp
examples/SelectionAndQuery/SelectionBoxSignal/: main.cpp
examples/SelectionAndQuery/SelectionSignal/: main.cpp
examples/SelectionAndQuery/WorldTolerance/: main.cpp
examples/SelectionAndQuery/ZoomToSelection/: main.cpp
examples/Serialization/GeoJsonRead/: main.cpp
examples/Serialization/GeoJsonWrite/: main.cpp
examples/Serialization/WkbRead/: main.cpp
examples/Serialization/WkbWrite/: main.cpp
examples/Serialization/WktOverlay/: main.cpp
examples/Serialization/WktReadPoint/: main.cpp
examples/Serialization/WktReadPolygon/: main.cpp
examples/Serialization/WktReadPolyline/: main.cpp
examples/Serialization/WktRoundtrip/: main.cpp
examples/Serialization/WktWrite/: main.cpp
examples/StyleAndSymbology/CategorizedRenderer/: main.cpp
examples/StyleAndSymbology/Classification/: main.cpp
examples/StyleAndSymbology/ClassificationMethods/: main.cpp
examples/StyleAndSymbology/ClearRenderer/: main.cpp
examples/StyleAndSymbology/GraduatedRenderer/: main.cpp
examples/StyleAndSymbology/GraduatedRendererSize/: main.cpp
samples/Common/: Helpers.h
samples/DataManagement/: README.md
samples/RenderAndPerformance/: README.md
samples/SamplesGallery/: main.cpp
samples/Serialization/: README.md
(+112 files in other folders)
